[FIX] Validacion REPO v1.2

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -100,7 +100,9 @@ figcaption
     min-width: 300px;
 .tabla-a.tabla-custom table th, .tabla-a.tabla-custom table td
     padding: 12px 10px !important
-
+.tabla-custom table tbody td
+    padding: 12px 10px !important
+    text-align: left
 .tabla-a.tabla-custom-2 thead 
     background-color: #F2EEFB
 .tabla-a.tabla-custom-2 table 
@@ -109,6 +111,8 @@ figcaption
     padding: 18px 20px !important
     vertical-align: top !important
     text-align: left
+table caption
+  font-weight: normal !important
 .pasos-b__header__btn--left, .pasos-b__header__btn--right
     border: 2px solid $color-acento-botones;
     background-color: $color-acento-botones;
